ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sariputra-tour-pro-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx

  rules:
    - host: sariputra.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sariputra-tour-pro-service
                port:
                  number: 80
